Added new Questions Type (Easy)